# EMET

./: .gitignore  CLAUDE.md  Cargo.toml  EMET_GCP_integration.txt  README.md  SYSTEM_REDACTED.txt  TAURUS_MASTER.txt  TAURUS_concept.txt  TAURUS_conversation_transcript.txt  TAURUS_expanded_research.txt  TAURUS_prime_directive.txt  TAURUS_schema (1).txt  docker-compose.yml
brain/: pyproject.toml
brain/brain/: __init__.py  celery_app.py  config.py
brain/brain/conversation/: __init__.py  handler.py  semantic_search.py  tier_labeling.py
brain/brain/entities/: __init__.py  extraction.py  graph.py
brain/brain/llm/: __init__.py  claude_client.py  ollama_client.py  router.py
brain/brain/memory/: __init__.py  chromadb.py  confidence.py  decay.py  postgres.py
brain/brain/research/: __init__.py  dedup.py  investigator.py  priority.py  tasks.py
brain/tests/: test_conversation.py  test_memory.py  test_research.py
config/: alerts.example.toml  brain.example.toml  daemon.example.toml  sources.example.toml
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs
daemon/src/alerts/: mod.rs
daemon/src/anomaly/: convergence.rs  mod.rs  silence.rs  welford.rs
daemon/src/checkpoint/: mod.rs
daemon/src/classifier/: mod.rs  ollama_pool.rs  routing.rs
daemon/src/memory/: chromadb.rs  mod.rs  postgres.rs
daemon/src/query/: mod.rs
daemon/src/sources/: acled.rs  cloudflare_radar.rs  fred.rs  gcp.rs  gdelt.rs  mod.rs  nasa_eonet.rs  nasa_firms.rs  opensky.rs  polymarket.rs  rss.rs  schumann.rs  usgs.rs  vesselfinder.rs
docs/: roadmap.md
malkuth/: README.md
(+40 files in other folders)
